# Sycan

./: .gitmodules  CMakeLists.txt
lib/: Object.h  Sycan.h  TextureProvider.h
src/: Object.cpp  Sycan.cpp  TextureProvider.cpp
